--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,3 +4,45 @@
   // padding-left: 1rem;
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .resize {
+    display: block;
+  }
+
+  clr-datagrid {
+    width: 110%;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .resize {
+    display: block;
+  }
+
+  clr-datagrid {
+    width: 100%;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .resize {
+    display: flex;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .resize {
+    display: flex;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .resize {
+    display: flex;
+  }
+}
