Added dist folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -142,7 +142,7 @@
   </div>
 
   <div class="clr-row clr-align-items-center">
-    <div class="clr-col-lg-6 clr-col-md-12 clr-col-sm-12">
+    <div class="clr-col-lg-6 clr-col-md-12 clr-col-sm-12 rearrange">
       <div class="clr-row">
         <div class="clr-col-8" style="font-weight: bold; padding-left: 50px;">
           COVID - 19 Affected Areas
