--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,6 +31,10 @@
   .resize {
     display: flex;
   }
+
+  .rearrange {
+    margin-top: -13rem;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -38,11 +42,19 @@
   .resize {
     display: flex;
   }
+
+  .rearrange {
+    margin-top: -13rem;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .resize {
     display: flex;
+  }
+
+  .rearrange {
+    margin-top: -13rem;
   }
 }
